--- a/GraphicsLabSS2019/GraphicsLabSS2019/GraphicsLabSS2019.vcxproj.filters
+++ b/GraphicsLabSS2019/GraphicsLabSS2019/GraphicsLabSS2019.vcxproj.filters
@@ -63,6 +63,18 @@
     <ClCompile Include="Fibers.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Exporter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Importer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FrameBuffer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ModelObject.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="WindowGLFW.h">
@@ -107,6 +119,18 @@
     <ClInclude Include="Fibers.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Exporter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Importer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FrameBuffer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ModelObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Shaders\FS_ShowTube.glsl">
@@ -119,6 +143,30 @@
       <Filter>Resource Files\Shaders</Filter>
     </None>
     <None Include="..\Shaders\VS_ShowLine.glsl">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
+    <None Include="..\Shaders\GS_ShowTube.glsl">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
+    <None Include="..\Shaders\FS_ShowPoints.glsl">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
+    <None Include="..\Shaders\VS_ShowPoints.glsl">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
+    <None Include="..\Shaders\FS_FrameBuffer.glsl">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
+    <None Include="..\Shaders\VS_FrameBuffer.glsl">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
+    <None Include="..\Shaders\CS_ScreenSpacedEnableVisibleTubes.glsl">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
+    <None Include="..\Shaders\FS_Sphere.glsl">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
+    <None Include="..\Shaders\VS_Sphere.glsl">
       <Filter>Resource Files\Shaders</Filter>
     </None>
   </ItemGroup>
