--- a/GraphicsLabSS2019/GraphicsLabSS2019/imgui.ini
+++ b/GraphicsLabSS2019/GraphicsLabSS2019/imgui.ini
@@ -4,7 +4,22 @@ Size=400,400
 Collapsed=0
 
 [Window][Settings]
-Pos=40,43
-Size=371,162
+Pos=16,16
+Size=368,449
+Collapsed=0
+
+[Window][Controlls]
+Pos=583,860
+Size=594,114
+Collapsed=0
+
+[Window][CuttingPlanes]
+Pos=39,538
+Size=358,225
+Collapsed=0
+
+[Window][Edit]
+Pos=18,492
+Size=259,295
 Collapsed=0
 
