--- a/GraphicsLabSS2019/GraphicsLabSS2019/GraphicsLabSS2019.vcxproj.filters
+++ b/GraphicsLabSS2019/GraphicsLabSS2019/GraphicsLabSS2019.vcxproj.filters
@@ -169,5 +169,23 @@
     <None Include="..\Shaders\VS_Sphere.glsl">
       <Filter>Resource Files\Shaders</Filter>
     </None>
+    <None Include="..\Shaders\FS_ShowTubeWithoutColorPicking.glsl">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
+    <None Include="..\Shaders\FS_Cube.glsl">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
+    <None Include="..\Shaders\VS_Cube.glsl">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
+    <None Include="..\Shaders\CS_ScreenSpacedDisableCubes.glsl">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
+    <None Include="..\Shaders\CS_DeactivateInnerCubes.glsl">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
+    <None Include="..\Shaders\GS_ShowCube.glsl">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
