--- a/GraphicsLabSS2019/GraphicsLabSS2019/imgui.ini
+++ b/GraphicsLabSS2019/GraphicsLabSS2019/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Settings]
-Pos=16,16
-Size=368,449
+Pos=3,-20
+Size=254,673
 Collapsed=0
 
 [Window][Controlls]
@@ -19,7 +19,7 @@ Size=358,225
 Collapsed=0
 
 [Window][Edit]
-Pos=18,492
+Pos=20,657
 Size=259,295
 Collapsed=0
 
